@@ -91,6 +91,8 @@ This is the first beta release of the upcoming official 0.5.4b release.
 - Added colour to "Un-select ALL" button.  Yellow so it stands out.
   * Button colours may not appear correctly as this is platform dependent. Colour
     may show as a border rather than a fill.
+- Moved settings.xml & profile_backup.xml to the /.RomRaider/ directory under the
+  users home directory.
 --- Editor ---
 - Set JInternalFrame.isPalette in TableFarme.java so table titles are visible on
   Mac OS.
